frontend/test/should_pass/basic_003.grg
rule r {
	pattern {
		if { true; }
	}
	replace {
	}
}

