frontend/test/should_fail/inh_attrib_004.grg
using inh_attrib_model_004;

rule r {

	replace {
	}
}

